--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -773,3 +773,19 @@ skill_leishentianmingshan: 'https://seer2-resource.yuuinih.com/sound/skill/12021
 skill_leishenjuexing: 'https://seer2-resource.yuuinih.com/sound/skill/08_3_002.mp3'
 skill_shandiandouqi: 'https://seer2-resource.yuuinih.com/sound/skill/08_3_003.mp3'
 skill_jiguangren: 'https://seer2-resource.yuuinih.com/sound/skill/08_1_003.mp3'
+skill_huoquan: 'https://seer2-resource.yuuinih.com/sound/skill/04_1_001.mp3'
+skill_huanghuo: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_002.mp3'
+skill_jiaoao: 'https://seer2-resource.yuuinih.com/sound/skill/04_3_001.mp3'
+skill_yanjie: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_003.mp3'
+skill_qihequan: 'https://seer2-resource.yuuinih.com/sound/skill/04_1_001.mp3'
+skill_yanhuohuanrao: 'https://seer2-resource.yuuinih.com/sound/skill/04_3_001.mp3'
+skill_shunyansha: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_001.mp3'
+skill_qiheshan: 'https://seer2-resource.yuuinih.com/sound/skill/04_1_001.mp3'
+skill_baoyan: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_003.mp3'
+skill_feiyanzhan: 'https://seer2-resource.yuuinih.com/sound/skill/04_1_001.mp3'
+skill_kaisazhiyan: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_002.mp3'
+skill_feihongjiaoyanzhen: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_001.mp3'
+skill_yandihuangyanshan: 'https://seer2-resource.yuuinih.com/sound/skill/11463.mp3'
+skill_zhenyangyan: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_001.mp3'
+skill_qiankunzhiyan: 'https://seer2-resource.yuuinih.com/sound/skill/04_3_001.mp3'
+skill_yandezizun: 'https://seer2-resource.yuuinih.com/sound/skill/04_3_002.mp3'
