--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -3000,7 +3000,6 @@
   effect:
     - effect_skill_ignite_opponent_mark_shaoshang
   tags: []
-
 - id: skill_xueruoshuipao
   element: Water
   category: Special
@@ -9314,3 +9313,197 @@
   tags: []
   effect:
     - effect_skill_opponent_clear_stage
+- id: skill_huoquan
+  element: Fire
+  category: Physical
+  target: opponent
+  power: 65
+  rage: 10
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect: []
+- id: skill_huanghuo
+  element: Fire
+  category: Special
+  target: opponent
+  power: 85
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: true
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_opponent_has_shield
+- id: skill_jiaoao
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_clear_self_negative_stage
+    - effect_skill_raise_spe_1_stage
+- id: skill_yanjie
+  element: Fire
+  category: Special
+  target: opponent
+  power: 50
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect: []
+- id: skill_qihequan
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 100
+  rage: 35
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_fixed_damage_50_if_hp_less_than_half
+- id: skill_yanhuohuanrao
+  element: Fire
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spa_1_stage
+    - effect_skill_raise_spd_1_stage
+- id: skill_shunyansha
+  element: Fire
+  category: Special
+  target: opponent
+  power: 60
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  priority: 1
+  tags: []
+  effect: []
+- id: skill_qiheshan
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 45
+  rage: 45
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_set_opponent_rage_to_self
+- id: skill_baoyan
+  element: Fire
+  category: Special
+  target: opponent
+  power: 90
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_crit_rate_15_percent
+    - effect_skill_add_crit_rate_15_percent_if_hp_less_than_half
+- id: skill_feiyanzhan
+  element: Fire
+  category: Physical
+  target: opponent
+  power: 100
+  rage: 25
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_min_damage_100
+- id: skill_kaisazhiyan
+  element: Fire
+  category: Special
+  target: opponent
+  power: 120
+  rage: 35
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  ignoreOpponentStageStrategy: positive
+  tags: []
+- id: skill_feihongjiaoyanzhen
+  element: Fire
+  category: Special
+  target: opponent
+  power: 140
+  rage: 40
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_restore_rage_25_if_opponent_shaoshang
+- id: skill_yandihuangyanshan
+  element: Fire
+  category: Climax
+  target: opponent
+  power: 170
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_shaoshang
+- id: skill_zhenyangyan
+  element: Fire
+  category: Special
+  target: opponent
+  power: 80
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_set_field_yanre
+- id: skill_qiankunzhiyan
+  element: Fire
+  category: Status
+  target: self
+  power: 0
+  rage: 25
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reverse_self_negative_stage
+- id: skill_yandezizun
+  element: Fire
+  category: Status
+  target: self
+  power: 0
+  rage: 35
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spa_1_stage
+    - effect_skill_raise_spe_1_stage
+    - effect_skill_raise_spa_1_stage_if_hp_less_than_half
