--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -226,3 +226,6 @@ mark_niliu: 'https://seer2-resource.yuuinih.com/png/markImage/3239.png'
 mark_dianxizengqiang: 'https://seer2-resource.yuuinih.com/png/markImage/3216.png'
 mark_global_leibaotian: 'https://seer2-resource.yuuinih.com/png/markImage/20007.png'
 mark_leishenjuexing: 'https://seer2-resource.yuuinih.com/png/markImage/3213.png'
+mark_dongqifuti: 'https://seer2-resource.yuuinih.com/png/markImage/3120.png'
+mark_hanbinghujia: 'https://seer2-resource.yuuinih.com/png/markImage/4010.png'
+mark_fansheguike: 'https://seer2-resource.yuuinih.com/png/markImage/4009.png'
