--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -788,4 +788,19 @@ skill_feihongjiaoyanzhen: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_0
 skill_yandihuangyanshan: 'https://seer2-resource.yuuinih.com/sound/skill/11463.mp3'
 skill_zhenyangyan: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_001.mp3'
 skill_qiankunzhiyan: 'https://seer2-resource.yuuinih.com/sound/skill/04_3_001.mp3'
-skill_yandezizun: 'https://seer2-resource.yuuinih.com/sound/skill/04_3_002.mp3'
+skill_yandidezizun: 'https://seer2-resource.yuuinih.com/sound/skill/04_3_002.mp3'
+skill_dongqiqianghua: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_dongqifuti: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_dongqichongji: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_dongqichongfeng: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_dongqishenjie: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_ningjudongqi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_dongqiguanchuan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_dongqisilie: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_fansheguike: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_dongqipenshe: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_wuxianbingjie: 'https://seer2-resource.yuuinih.com/sound/skill/10664.mp3'
+skill_hanbingdongqi: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_hanbingbaofa: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_hanbinghujia: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_hanbingtuji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
