--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -1220,3 +1220,17 @@
                 value: mark_global_yanre
         evaluator:
           type: exist
+# 冻气: 有冻气附体时,暴击率增加5%
+- id: effect_emblem_increase_crit_rate_when_dongqifuti
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    type: addCritRate
+    target: useSkillContext
+    value: 5
+  condition:
+    type: every
+    conditions:
+      - type: checkSelf
+      - type: selfHasMark
+        baseId: mark_dongqifuti
