--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -819,7 +819,7 @@
   priority: 0
   condition:
     type: selfUseSkill
-  apply:
+  apply: &operator_heal_self_quarter
     type: heal
     target: self
     value:
@@ -7937,6 +7937,18 @@
     conditions:
       - type: selfUseSkill
       - *condition_self_has_huanxiang
+      - &condition_opponent_not_ice_element
+        type: evaluate
+        target:
+          base: opponent
+          chain:
+            - type: select
+              arg:
+                type: base
+                arg: element
+        evaluator:
+          type: notSame
+          value: Ice
 # 使自身获得晚安
 - id: effect_skill_add_mark_wanan
   trigger: OnHit
@@ -9692,3 +9704,259 @@
     conditions:
       - type: selfUseSkill
       - *condition_self_hp_below_half
+# 使自身获得冻气附体
+- id: effect_skill_add_mark_dongqifuti
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_dongqifuti
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+# 消耗冻气附体恢复自身1/4的HP
+- id: effect_skill_consume_dongqifuti_heal_self_quarter_max_hp
+  trigger: OnHit
+  priority: 0
+  apply:
+    - *operator_heal_self_quarter
+    - &operator_consume_mark_dongqifuti
+      type: destroyMark
+      target:
+        base: opponentMarks
+        chain:
+          - type: whereAttr
+            extractor: baseId
+            evaluator:
+              type: same
+              value: mark_dongqifuti
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: selfHasMark
+        baseId: mark_dongqifuti
+# 消耗冻气附体使技能必定暴击
+- id: effect_skill_consume_dongqifuti_sure_crit
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    - type: setSureCrit
+      target: useSkillContext
+      priority: 0
+    - *operator_consume_mark_dongqifuti
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: selfHasMark
+        baseId: mark_dongqifuti
+# 10%使对方冻伤
+- id: effect_skill_add_mark_opponent_dongshang_10_percent
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: opponent
+    mark:
+      type: entity:baseMark
+      value: mark_dongshang
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_probability_10_percent_template
+      - *condition_opponent_not_ice_element
+# 10%使对方冻伤 如果有冻气附体，消耗冻气附体并改为70%冻伤
+- id: effect_skill_add_mark_opponent_dongshang_10_percent_if_consume_dongqifuti_70_percent
+  trigger: OnHit
+  priority: 0
+  apply:
+    - type: addMark
+      target: opponent
+      mark:
+        type: entity:baseMark
+        value: mark_dongshang
+    - *operator_consume_mark_dongqifuti
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_opponent_not_ice_element
+      - type: selfHasMark
+        baseId: mark_dongqifuti
+      - type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent:
+            type: conditional
+            trueValue: 70
+            falseValue: 10
+            condition:
+              type: selfHasMark
+              baseId: mark_dongqifuti
+# 当最大生命值大于敌方时，增加95%暴击率
+- id: effect_skill_increase_crit_rate_95_if_max_hp_greater_than_opponent
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    type: addCritRate
+    target: useSkillContext
+    value: 95
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - &condition_self_max_hp_greater_than_opponent
+        type: evaluate
+        target:
+          base: self
+          chain:
+            - type: select
+              arg:
+                type: base
+                arg: maxHp
+        evaluator:
+          type: compare
+          operator: '>'
+          value:
+            type: dynamic
+            selector:
+              base: opponent
+              chain:
+                - type: select
+                  arg:
+                    type: base
+                    arg: maxHp
+# 当最大生命值大于敌方时，给敌方附加30点流血
+- id: effect_skill_add_mark_opponent_liuxie_30_if_max_hp_greater_than_opponent
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: opponent
+    mark:
+      type: entity:baseMark
+      value: mark_liuxie
+    stack: 30
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_self_max_hp_greater_than_opponent
+# 给自己添加最大生命值-500层的反射龟壳
+- id: effect_skill_add_mark_fansheguike
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_fansheguike
+    stack: &value_max_hp_minus_500
+      type: dynamic
+      selector:
+        base: self
+        chain:
+          - type: select
+            arg:
+              type: base
+              arg: maxHp
+          - type: add
+            arg: -500
+          - type: clampMin
+            arg: 0
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - &condition_self_max_hp_greater_than_500
+        type: evaluate
+        target:
+          base: self
+          chain:
+            - type: select
+              arg:
+                type: base
+                arg: maxHp
+        evaluator:
+          type: compare
+          operator: '>'
+          value: 500
+# 增加最大生命值-500点威力
+- id: effect_skill_add_power_by_self_max_hp_minus_500
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    type: addPower
+    target: useSkillContext
+    value: *value_max_hp_minus_500
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_self_max_hp_greater_than_500
+# 对手冰冻时威力翻倍
+- id: effect_skill_power_2x_if_opponent_is_bingdong
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    type: amplifyPower
+    target: useSkillContext
+    value: 2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: opponentHasMark
+        baseId: mark_bingdong
+# 附加最大生命值-500的伤害
+- id: effect_skill_fixed_damage_by_self_max_hp_minus_500
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: addModified
+    target: damageContext
+    percent: 0
+    delta: *value_max_hp_minus_500
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_self_max_hp_greater_than_500
+# 给自己添加(最大生命值-500)*2的寒冰护甲
+- id: effect_skill_add_mark_hanbinghujia_2x_self_max_hp_minus_500
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_hanbinghujia
+    stack:
+      type: dynamic
+      selector:
+        base: self
+        chain:
+          - type: select
+            arg:
+              type: base
+              arg: maxHp
+          - type: add
+            arg: -500
+          - type: clampMin
+            arg: 0
+          - type: multiply
+            arg: 2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_self_max_hp_greater_than_500
